[package]
name = "pallet-eth2-light-client"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
codec = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive", "max-encoded-len"] }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }
webb-proposals = { version = "0.5.4", default-features = false, features = ["scale", "evm", "substrate"] }
ethereum-types = { version = "0.14.0", default-features = false }
derive_more = { version = "^0.99.2", default-features = false }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }
bitvec = { version = "1.0.0", default-features = false, features = ["atomic", "alloc"] }

eth2_ssz = { path = "../crates/ssz", default-features = false }
merkle_proof = { path = "../crates/merkle_proof", default-features = false }
bls = { path = "../crates/bls", default-features = false }
tree_hash = { path = "../crates/tree_hash", default-features = false }
tree_hash_derive = { path = "../crates/tree_hash_derive", default-features = false }

frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.36" }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
eth-types = { path = "../crates/eth-types", default-features = false, features = ["eth2", "eip1559"] }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = { version = "1.0.58", default-features = false, features = ["alloc"] }
eth2-pallet-init = { path = "../crates/eth2-pallet-init" }
async-trait = "0.1.58"

[features]
default = ["std"]
std = [
	"codec/std",
	"scale-info/std",
	"webb-proposals/std",
	"tree_hash/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-balances/std",
	"sp-runtime/std",
	"sp-std/std",
	"ethereum-types/std",
	"merkle_proof/std",
	"bls/std",
	"bitvec/std",
	"rlp/std",
	"serde/std",
	"hex/std",
	"sp-core/std",
    "eth-types/std"
]

try-runtime = ["frame-support/try-runtime"]
