[package]
name = "node-template-runtime"
version = "4.0.0-dev"
description = "A fresh FRAME-based Substrate node, ready for hacking."
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
homepage = "https://substrate.io/"
edition = "2021"
license = "MIT-0"
publish = false
repository = "https://github.com/substrate-developer-hub/substrate-node-template/"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, features = ["derive"] }
scale-info = { workspace = true }
log = { workspace = true }

pallet-aura = { workspace = true }
pallet-balances = { workspace = true }
pallet-bags-list = { workspace = true }
frame-support = { workspace = true }
frame-election-provider-support = { workspace = true }
pallet-election-provider-multi-phase = { workspace = true }
pallet-grandpa = { workspace = true }
pallet-indices = { workspace = true }
pallet-session = { workspace = true, features = ["historical"] }
pallet-staking = { workspace = true }
pallet-staking-reward-curve = { workspace = true }
pallet-sudo = { workspace = true }
frame-system = { workspace = true }
frame-try-runtime = { workspace = true, optional = true }
pallet-timestamp = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-utility = { workspace = true }
frame-executive = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-inherents = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-session = { workspace = true }
sp-staking = { workspace = true }
sp-std = { workspace = true }
sp-transaction-pool = { workspace = true }
sp-version = { workspace = true }

# Used for the node template's RPCs
frame-system-rpc-runtime-api = { workspace = true }
pallet-transaction-payment-rpc-runtime-api = { workspace = true }

# Used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true }
frame-system-benchmarking = { workspace = true, optional = true }

# Local Dependencies
pallet-eth2-light-client = { path = "../pallets/eth2-light-client", default-features = false }
pallet-eth2-light-client-runtime-api = { path = "../pallets/eth2-light-client/runtime-api", default-features = false }

# DKG Substrate Dependencies
dkg-runtime-primitives = { workspace = true }
pallet-dkg-metadata = { workspace = true }
pallet-dkg-proposal-handler = { workspace = true }
pallet-dkg-proposals = { workspace = true }

[build-dependencies]
substrate-wasm-builder = { version = "5.0.0-dev", git = "https://github.com/paritytech/substrate.git", optional = true , branch = "polkadot-v1.0.0" }

[features]
default = ["std"]
std = [
    "frame-try-runtime?/std",
    "frame-system-benchmarking?/std",
    "frame-benchmarking?/std",
    "codec/std",
    "scale-info/std",
    "frame-election-provider-support/std",
    "frame-executive/std",
    "frame-support/std",
    "frame-system-rpc-runtime-api/std",
    "frame-system/std",
    "frame-try-runtime/std",
    "pallet-aura/std",
    "pallet-balances/std",
    "pallet-bags-list/std",
    "pallet-election-provider-multi-phase/std",
    "pallet-grandpa/std",
    "pallet-indices/std",
    "pallet-session/std",
    "pallet-staking/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-transaction-payment/std",
    "pallet-utility/std",
    "log/std",
    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-consensus-grandpa/std",
    "sp-core/std",
    "sp-io/std",
    "sp-inherents/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-staking/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",
    "substrate-wasm-builder",

    # Local pallets
    "pallet-eth2-light-client/std",
    "pallet-eth2-light-client-runtime-api/std",

    # DKG pallets
    "dkg-runtime-primitives/std",
    "pallet-dkg-metadata/std",
    "pallet-dkg-proposal-handler/std",
    "pallet-dkg-proposals/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system-benchmarking/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-grandpa/runtime-benchmarks",
    "pallet-timestamp/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-try-runtime/try-runtime",
    "frame-executive/try-runtime",
    "frame-system/try-runtime",
    "frame-support/try-runtime",
    "pallet-aura/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-grandpa/try-runtime",
    "pallet-session/try-runtime",
    "pallet-sudo/try-runtime",
    "pallet-timestamp/try-runtime",
    "pallet-transaction-payment/try-runtime",
]
