[package]
name = "bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>"]
edition = "2021"

[dependencies]
eth2_ssz = { path = "../ssz", default-features = false }
tree_hash = { path = "../tree_hash", default-features = false }
milagro_bls = { git = "https://github.com/webb-tools/milagro_bls", default-features = false }
rand = { version = "0.7.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0.116", features = ["derive"], optional = true }
eth2_serde_utils = { path = "../serde_utils", default-features = false, optional = true }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
eth2_hashing = { path = "../eth2_hashing", default-features = false, features = ["zero_hash_cache"] }
ethereum-types = { version = "0.13.1", default-features = false }
zeroize = { version = "1.4.2", features = ["zeroize_derive"], default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "rand/std",
    "rand_chacha/std",
    "hex/std",
    "milagro_bls/std",
    "eth2_hashing/std",
    "ethereum-types/std",
    "eth2_serde_utils/std",
]
