[package]
name = "webb-bls"
version = "0.2.0"
authors = ["Paul Hauner <paul@paulhauner.com>, Webb Developers <hello@webb.tools>"]
edition = "2021"

[dependencies]
ssz = { package = "webb-eth2-ssz", path = "../ssz", default-features = false }
tree-hash = { package = "webb-tree-hash", path = "../tree-hash", default-features = false }
eth2-hashing = { package = "webb-eth2-hashing", path = "../eth2-hashing", default-features = false, features = ["zero_hash_cache"] }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false, optional = true }

log = { version = "0.4.14", default-features = false }
milagro_bls = { git = "https://github.com/Snowfork/milagro_bls", default-features = false, rev="a6d66e4eb89015e352fb1c9f7b661ecdbb5b2176" }
rand = { version = "0.7.3", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
serde = { version = "1.0.152", features = ["derive"], default-features = false}

hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
ethereum-types = { version = "0.14.1", default-features = false }
zeroize = { version = "1.4.2", features = ["zeroize_derive"], default-features = false }

[features]
default = ["std"]
std = [
    "serde/std",
    "rand/std",
    "rand_chacha/std",
    "hex/std",
    "milagro_bls/std",
    "eth2-hashing/std",
    "ethereum-types/std",
    "eth2-serde-utils/std",
]
arbitrary = [
    "ssz/arbitrary",
    "tree-hash/arbitrary",
]
