[package]
name = "webb-bls"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@paulhauner.com>, Webb Developers <hello@webb.tools>"]


[dependencies]
ssz = { package = "webb-eth2-ssz", path = "../ssz", default-features = false }
tree-hash = { package = "webb-tree-hash", path = "../tree-hash", default-features = false }
eth2-hashing = { package = "webb-eth2-hashing", path = "../eth2-hashing", default-features = false, features = ["zero_hash_cache"] }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false, optional = true }

log = { workspace = true }
milagro_bls = { workspace = true } 
rand = { workspace = true }
rand_chacha = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
ethereum-types = { workspace = true }
zeroize = { workspace = true }

[features]
default = ["std"]
std = [
    "serde/std",
    "rand/std",
    "rand_chacha/std",
    "hex/std",
    "milagro_bls/std",
    "eth2-hashing/std",
    "ethereum-types/std",
    "eth2-serde-utils/std",
]
arbitrary = [
    "ssz/arbitrary",
    "tree-hash/arbitrary",
]
