[package]
name = "webb-consensus-types"
version = "0.1.0"
authors = ["Webb Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
ethereum-types = { version = "0.14.1", features = ["codec", "rlp", "serialize"], default-features = false }
derive_more = { version = "^0.99.2" }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }

eth-types = { path = "../eth-types", default-features = false, features = ["eth2"] }
eth2-ssz = { package = "webb-eth2-ssz", path = "../ssz", default-features = false }
eth2-ssz-derive = { package = "webb-eth2-ssz-derive", path = "../ssz-derive", default-features = false }
tree-hash = { package = "webb-tree-hash", path = "../tree-hash", default-features = false }
tree-hash-derive = { package = "webb-tree-hash-derive", path = "../tree-hash-derive", default-features = false }
merkle-proof = { package = "webb-merkle-proof", path = "../merkle-proof", default-features = false }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false }

bitvec = { version = "1.0.0", default-features = false, features = ["atomic", "alloc"] }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
    "serde/std",
    "tree-hash/std",
    "eth-types/std",
    "bitvec/std",
    "merkle-proof/std",
    "codec/std",
    "scale-info/std",
    "ethereum-types/std",
]
arbitrary = [
    "ethereum-types/arbitrary",
    "eth2-ssz/arbitrary",
    "tree-hash/arbitrary",
]