[package]
name = "webb-consensus-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]

eth-types = { path = "../eth-types", default-features = false, features = ["eth2"] }
eth2-ssz = { package = "webb-eth2-ssz", path = "../ssz", default-features = false }
tree-hash = { package = "webb-tree-hash", path = "../tree-hash", default-features = false }
tree-hash-derive = { package = "webb-tree-hash-derive", path = "../tree-hash-derive", default-features = false }
merkle-proof = { package = "webb-merkle-proof", path = "../merkle-proof", default-features = false }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false }

bitvec = { workspace = true, features = ["atomic", "alloc"] }
hex = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
rlp = { workspace = true }
rlp-derive = { workspace = true }
ethereum-types = { workspace = true, features = ["codec", "rlp", "serialize"] }
derive_more = { workspace = true }
tiny-keccak = { workspace = true }

[features]
default = ["std"]
std = [
    "tree-hash/std",
    "eth-types/std",
    "bitvec/std",
    "merkle-proof/std",
    "codec/std",
    "scale-info/std",
    "ethereum-types/std",
]
arbitrary = [
    "ethereum-types/arbitrary",
    "eth2-ssz/arbitrary",
    "tree-hash/arbitrary",
]