[package]
name = "consensus_types"
version = "0.1.0"
authors = ["Webb Developers"]
edition = "2021"

[dependencies]
serde = { version = "1.0.116", default-features = false, features = ["derive"] }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
ethereum-types = { version = "0.14.0", features = ["codec", "rlp", "serialize"], default-features = false }
derive_more = { version = "^0.99.2" }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }

eth-types = { path = "../eth-types", default-features = false, features = ["eth2", "eip1559"] }
eth2_ssz = { path = "../ssz", default-features = false, optional = true }
eth2_ssz_derive = { path = "../ssz_derive", default-features = false, optional = true }
tree_hash = { path = "../tree_hash", default-features = false, optional = true }
tree_hash_derive = { path = "../tree_hash_derive", default-features = false, optional = true }
merkle_proof = { path = "../merkle_proof", default-features = false, optional = true }
eth2_serde_utils = { path = "../serde_utils", default-features = false, optional = true }

bitvec = { version = "1.0.0", default-features = false, features = ["atomic", "alloc"] }

hex = { version = "0.4.2", default-features = false, features = ["alloc"] }

codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"tree_hash/std",
	"eth-types/std",
	"bitvec/std",
    "merkle_proof/std",

	"codec/std",
	"scale-info/std",

	"ethereum-types/std",
]
