[package]
name = "webb-eth-rpc-client"
version = "0.1.0"
edition = "2021"

[dependencies]
eth-types = { path = "../eth-types", default-features = false, features = ["eth2", "arbitrary"] }
finality-update-verify = { package = "webb-finality-update-verify", path = "../finality-update-verify", features = ["arbitrary"] }

types = { workspace = true }
merkle_proof = { workspace = true, features = ["arbitrary"] }
tree_hash = {workspace = true, features = ["arbitrary"] }
ethereum_hashing = { workspace = true }
ethereum_ssz = { workspace = true, features = ["arbitrary"] }
ethereum-types = { workspace = true, features = ["rlp", "serialize"] }
funty =  { workspace = true }
anyhow =  { workspace =true }
log = { workspace = true, features = ["std", "serde"] }
serde_json = { workspace = true }
serde = { workspace = true, features = ["derive"] }
reqwest = { workspace = true, features = ["blocking", "json"] }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt", "time"] }
env_logger = { workspace = true }
futures = { workspace = true }
async-std = { workspace = true }
prometheus = { workspace = true, features = ["process"] }
hex = { workspace = true }
toml = { workspace = true }
atomic_refcell = { workspace = true }
bitvec = { workspace = true }
dotenv = { workspace = true }
lazy_static = { workspace = true }
warp = { workspace = true }
thread = { workspace = true }


