[package]
name = "eth-types"
version = "0.1.0"
authors = ["Near Inc <hello@nearprotocol.com>", "Webb Developers <hello@webb.tools>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.101", default-features = false, features = ["derive"], optional = true }
rlp = { version = "0.5.0", default-features = false }
rlp-derive = { version = "0.1.0", default-features = false }
ethereum-types = { version = "0.14.1", features = ["codec", "rlp"], default-features = false }
derive_more = { version = "^0.99.2" }
tiny-keccak = { version = "2.0", features = ["keccak"], default-features = false }

eth2-ssz = { package = "webb-eth2-ssz",  path = "../ssz", default-features = false, features = ["arbitrary"] }
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash", default-features = false, features = ["arbitrary"] }
tree-hash-derive = { package = "webb-tree-hash-derive", path = "../tree-hash-derive", default-features = false }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false, optional = true }
hex = { version = "0.4.2", default-features = false, features = ["alloc"] }
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.1", default-features = false, features = ["derive"] }

[features]
default = ["eip1559", "eth2", "std"]
std = [
	"serde/std",
	"codec/std",
	"scale-info/std",
	"ethereum-types/std",
	"eth2-serde-utils/std",
	"ethereum-types/serialize"
]
eip1559 = []
eth2 = []
arbitrary = ["ethereum-types/arbitrary"]