[package]
name = "eth-types"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Near Inc <hello@nearprotocol.com>", "Webb Developers <hello@webb.tools>"]


[dependencies]
ssz = { package = "webb-eth2-ssz",  path = "../ssz", default-features = false }
tree-hash = { package = "webb-tree-hash",  path = "../tree-hash", default-features = false }
tree-hash-derive = { package = "webb-tree-hash-derive", path = "../tree-hash-derive", default-features = false }
eth2-serde-utils = { package = "webb-eth2-serde-utils", path = "../serde-utils", default-features = false, optional = true }
hex = { workspace = true }
codec = { package = "parity-scale-codec", workspace = true }
scale-info = { workspace = true }
serde = { workspace = true }
rlp = { workspace = true }
rlp-derive = { workspace = true }
ethereum-types = { workspace = true, features = ["codec", "rlp"] }
derive_more = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }

[features]
default = ["eth2", "std"]
std = [
    "serde/std",
    "codec/std",
    "scale-info/std",
    "ethereum-types/std",
    "eth2-serde-utils/std",
    "ethereum-types/serialize"
]
eth2 = []
arbitrary = [
    "ethereum-types/arbitrary",
    "ssz/arbitrary",
    "tree-hash/arbitrary",
]