[package]
name = "webb-eth2-hashing"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = ["Paul Hauner <paul@paulhauner.com>, Webb Developers <hello@webb.tools>"]
description = "Hashing primitives used in Ethereum 2.0"

[dependencies]
lazy_static = { workspace = true, optional = true,features = ["spin_no_std"] }
ring = { workspace = true, optional = true }
sha2 = { workspace = true }

[dev-dependencies]
rustc-hex = "2.1.0"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.18"

[features]
default = ["zero_hash_cache", "std"]
std = ["ring"]
zero_hash_cache = ["lazy_static"]
